# llm_pipeline

./: docker-compose.yml
llm_inference_api/: README.md  pyproject.toml
llm_inference_api/src/api/: app.py  celery_config.py  tasks.py
llm_inference_api/src/backend/: __init__.py  celery_config.py
llm_inference_api/src/frontend/: __init__.py  app.py
llm_pipeline/: Dockerfile-backend  Dockerfile-frontend  README.md  prometheus.yml  pyproject.toml
llm_pipeline/src/backend/: celery_config.py  tasks.py
llm_pipeline/src/frontend/: __init__.py
