[tool.poetry]
name = "llm_inference_api"
version = "0.1.0"
description = ""
authors = ["Franek Budrowski <fbudrowski@gmail.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.41.2"
torch = "^2.3.1"
quart = "^0.19.6"
requests = "^2.32.3"
celery = "^5.4.0"
redis = "^5.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "api"