[tool.poetry]
name = "llm_inference_api"
version = "0.1.0"
description = ""
authors = ["Franek Budrowski <fbudrowski@gmail.com>"]
readme = "README.md"
packages = [
    {include = "backend", from = "src"},
    {include = "frontend", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
transformers = { version = "^4.41.2", optional = true}
torch = {version = "^2.3.0", optional = true}
quart = "^0.19.6"
requests = "^2.32.3"
celery = "^5.4.0"
redis = "^5.0.5"
prometheus-client = {version = "^0.20.0", optional = true}

[tool.poetry.extras]
backend = ["transformers", "torch"]
frontend = ["prometheus-client"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "frontend:app"